infra/k8s/expiration_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expiration-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expiration
    template:
        metadata:
            labels:
                app: expiration
        spec:
            containers:
            - name: expiration
              image: 192.168.1.59:5000/ticketing_expiration:latest
