infra/k8s/auth_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth
    template:
        metadata:
            labels:
                app: auth
        spec:
            containers:
            - name: auth
              image: 192.168.1.59:5000/ticketing_auth:latest
---
apiVersion: v1
kind: Service
metadata:
    name: auth-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: auth
    ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
