infra/k8s/client_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
            - name: client
              image: 192.168.1.59:5000/ticketing_client:latest
---
apiVersion: v1
kind: Service
metadata:
    name: client-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: client
    ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
