infra/k8s/natss_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: natss-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: natss
    template:
        metadata:
            labels:
                app: natss
        spec:
            containers:
            - name: natss
              image: nats-streaming:0.17.0
              args: 
                [
                  '-p',
                  '4222',
                  '-m',
                  '8222',
                  '-hbi',
                  '5s',
                  '-hbt',
                  '5s',
                  '-hbf',
                  '2',
                  '-SD',
                  '-cid',
                  'ticketing'
              ]

---
apiVersion: v1
kind: Service
metadata:
    name: natss-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: natss
    ports:
    - name: natss-client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: natss-monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
