infra/k8s/orders_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: orders-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: orders
    template:
        metadata:
            labels:
                app: orders
        spec:
            containers:
            - name: orders
              image: 192.168.1.59:5000/ticketing_orders:latest
---
apiVersion: v1
kind: Service
metadata:
    name: orders-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: orders
    ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
