infra/k8s/payments_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payments-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: payments
    template:
        metadata:
            labels:
                app: payments
        spec:
            containers:
            - name: payments
              image: 192.168.1.59:5000/ticketing_payments:latest
---
apiVersion: v1
kind: Service
metadata:
    name: payments-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: payments
    ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
