infra/k8s/tickets-mongo-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-mongo-deploy
    namespace: node-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
    name: tickets-mongo-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: tickets-mongo
    ports:
    - name: tickets-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
