infra/k8s/tickets_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-deploy
    namespace: node-ticketing
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tickets
    template:
        metadata:
            labels:
                app: tickets
        spec:
            containers:
            - name: tickets
              image: 192.168.1.59:5000/ticketing_tickets:latest
---
apiVersion: v1
kind: Service
metadata:
    name: tickets-svc 
    namespace: node-ticketing
spec:
    type: ClusterIP
    selector:
        app: tickets
    ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
